@@ -1110,6 +1110,7 @@ transfer_item_to (ECalendarViewEvent *event, ECal *dest_client, gboolean remove_
 	const char *uid;
 	char *new_uid;
 	icalcomponent *orig_icalcomp;
+	icalproperty *icalprop;
 
 	uid = icalcomponent_get_uid (event->comp_data->icalcomp);
 
@@ -1121,7 +1122,11 @@ transfer_item_to (ECalendarViewEvent *event, ECal *dest_client, gboolean remove_
 			return;
 	} else {
 		orig_icalcomp = icalcomponent_new_clone (event->comp_data->icalcomp);
-
+			
+		icalprop = icalproperty_new_x ("1");
+		icalproperty_set_x_name (icalprop, "X-EVOLUTION-MOVE-CALENDAR");
+		icalcomponent_add_property (orig_icalcomp, icalprop);
+		
 		if (!remove_item) {
 			/* change the UID to avoid problems with duplicated UIDs */
 			new_uid = e_cal_component_gen_uid ();
